feat: reupdate to 1.19.3 chore: update default config chore: update mod metadata